--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
   <title>WIDE</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/favicos/favicon.ico">
+  
+  <link rel="icon" type="image/svg+xml" href="assets/favicos/favicon_48.svg">
+  <link rel="alternate icon" href="assets/favicos/favicon.ico">
 </head>
 <body>
   <app-root></app-root>
